@@ -1,32 +1,31 @@
 package dev.spiritstudios.specter.impl.config.gui.widget;
 
+import com.mojang.datafixers.util.Pair;
+import dev.spiritstudios.specter.api.config.Config;
 import net.minecraft.client.gui.tooltip.Tooltip;
 import net.minecraft.client.gui.widget.SliderWidget;
 import net.minecraft.text.Text;
+import net.minecraft.util.Identifier;
 import net.minecraft.util.math.MathHelper;
 
-import java.util.function.Consumer;
-import java.util.function.Supplier;
-
 public class FloatSliderWidget extends SliderWidget {
-	private final Supplier<Float> getter;
-	private final Consumer<Float> setter;
+	private final Config.Value<Float> configValue;
 
 	private final float min;
 	private final float max;
 
-	public FloatSliderWidget(String translationKey, float min, float max, Supplier<Float> getter, Consumer<Float> setter) {
-		super(0, 0, 0, 20, Text.translatable(translationKey), 0);
-		this.getter = getter;
-		this.setter = setter;
+	public FloatSliderWidget(Config.Value<Float> configValue, Identifier configId) {
+		super(0, 0, 0, 20, Text.translatable(configValue.translationKey(configId)), 0);
+		this.configValue = configValue;
 
-		Text tooltip = Text.translatableWithFallback(translationKey + ".tooltip", "");
+		Text tooltip = Text.translatableWithFallback("%s.tooltip".formatted(configValue.translationKey(configId)), "");
 		if (!tooltip.getString().isEmpty()) this.setTooltip(Tooltip.of(tooltip));
 
-		this.min = min;
-		this.max = max;
+		Pair<Float, Float> range = configValue.range();
+		this.min = range == null ? 0.0F : range.getFirst();
+		this.max = range == null ? 1.0F : range.getSecond();
 
-		this.value = (getter.get() - min) / (max - min);
+		this.value = configValue.get();
 		applyValue();
 	}
 
@@ -36,15 +35,12 @@ public class FloatSliderWidget extends SliderWidget {
 
 	@Override
 	public Text getMessage() {
-		return Text.of(super.getMessage().getString()
-			+ ": "
-			+ String.format("%.1f", getter.get())
-		);
+		return Text.of("%s: %s".formatted(super.getMessage().getString(), String.format("%.1f", configValue.get())));
 	}
 
 	@Override
 	protected void applyValue() {
 		value = MathHelper.clamp(value, 0, 1);
-		setter.accept((float) (value * (max - min) + min));
+		configValue.set((float) (value * (max - min) + min));
 	}
 }
